data/derived/sp14/progs/unify/prog0994.ml.out
Characters 46-65:
  wwhile ((if f b = b then (b, failwith "asd") else failwith "asd") ,b);;
                           ^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
